@@ -25,6 +25,7 @@ Bug fixes:
 - Modifying the event now automatically sends a notification.
 - The confirmation options are now radio buttons instead of a select list.
 - You can now only modify and delete events via the organizers calendar.
+- searchCalendars now only returns users if they have a calendar.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
